# Automated-Planning

./: README.md
task1/: task1_domain.pddl  task1_problem.pddl
task2/: task2_domain.pddl  task2_problem.pddl
task3/: task3_domain_htn.hddl  task3_problem_htn.hddl
task4/: task4_domain.pddl  task4_problem.pddl
task5/plansys2_task5/: CMakeLists.txt  compile_and_run.sh  package.xml  useful_commands
task5/plansys2_task5/launch/: plansys2_task5_launch.py
task5/plansys2_task5/pddl/: task5_domain.pddl  task5_problem
task5/plansys2_task5/src/: fill_box_with_supply_action_node.cpp  load_carrier_position_1_action_node.cpp  load_carrier_position_2_action_node.cpp  load_carrier_position_3_action_node.cpp  load_carrier_position_4_action_node.cpp  load_robot_action_node.cpp  move_1_2_3_4_loaded_carrier_action_node.cpp  move_1_2_3_loaded_carrier_action_node.cpp  move_1_2_loaded_carrier_action_node.cpp  move_1_loaded_carrier_action_node.cpp  move_loaded_robot_action_node.cpp  move_unloaded_robot_action_node.cpp  unfill_box_with_supply_action_node.cpp  unload_carrier_position_1_action_node.cpp  unload_carrier_position_2_action_node.cpp  unload_carrier_position_3_action_node.cpp  unload_carrier_position_4_action_node.cpp  unload_robot_action_node.cpp
